--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,7 +51,7 @@ body{
 .text-description--title{
     font-size:16px;
     @include for-mobile-up{
-        font-size: 24px;
+        font-size: 22px;
     }
 }
 .text-description--paragraph{
@@ -59,6 +59,9 @@ body{
     padding-top: 15px;
     line-height: 1.6;
     padding-right: 8px;
+    @include for-mobile-up{
+        padding-right: 25px;
+    }
 }
 
 .img__container {
@@ -86,7 +89,7 @@ body{
             color:$greyish-blue;
         }
         @include for-mobile-up{
-            padding-right: 190px;
+            padding-right: 170px;
         }
     }
     &--img{
@@ -131,7 +134,7 @@ body{
     pointer-events: none;
     @include for-mobile-up{
         position: absolute;
-        right:-15%;
+        right:-12%;
         left:auto;
         bottom: auto;
         top:50%;
