--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -16,7 +16,9 @@
   html, body {
     height: 100%;
   }
-  
+  img{
+    height: 100%;
+  }
   /*
     Typographic tweaks!
     4. Add accessible line-height
